// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Content blanks 1`] = `
Array [
  "Do you know the way to ",
  <span
    className="bg-yellow-200"
  >
    ________________
  </span>,
  "?",
]
`;

exports[`Content examples 1`] = `
Array [
  "Do you know the way to ",
  <span
    className="bg-green-200"
  >
    San Jose
  </span>,
  "?",
]
`;

exports[`Content input w/ prompts 1`] = `
Array [
  "Do you know the way to ",
  <input
    data-testid="input"
    onChange={[Function]}
    placeholder="[place]"
    size={7}
    type="text"
  />,
  "?",
]
`;

exports[`Content input w/o prompts 1`] = `
Array [
  "Do you know the way to ",
  <input
    data-testid="input"
    onChange={[Function]}
    placeholder="________________"
    size={16}
    type="text"
  />,
  "?",
]
`;

exports[`Content prompts 1`] = `
Array [
  "Do you know the way to ",
  <span
    className="bg-blue-200"
  >
    [place]
  </span>,
  "?",
]
`;
